--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,14 @@
        app:layout_constraintEnd_toEndOf="parent"
        android:text="observePattern"/>
 
+   <Button
+       android:id="@+id/btn_proxy"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="20dp"
+       android:text="proxy"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/btn_observerPattern"/>
+
 </android.support.constraint.ConstraintLayout>
