--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,15 @@
        app:layout_constraintTop_toBottomOf="@id/btn_strategy"/>
 
 
+   <Button
+       android:id="@+id/btn_adapter"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="10dp"
+       android:text="adapter"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/btn_builder"/>
+
+
 </android.support.constraint.ConstraintLayout>
